--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </main>
 
     <footer>
-         <p id="contato">Site criado por <a href="https://www.youtube.com/?gl=BR&hl=PT" target="_blank" >Henrique Medeiros</a> para o exercício.</p>
+         <p id="contato">Site criado por <a href="https://github.com/henriquemfarias" target="_blank" >Henrique Medeiros</a> para o exercício.</p>
         </footer>
 </body>
 </html>
