--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
         <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
     </main>
 
+        <p><a href="#home">Volta ao topo.</a></p>
     <footer>
-         <p id="contato">Site criado por <a href="https://github.com/henriquemfarias" target="_blank" >Henrique Medeiros</a> para o exercício.</p>
+         <p id="contato">Site criado por <a href="https://github.com/henriquemfarias" target="_blank" >Henrique Medeiros</a> para o estudo.</p>
         </footer>
 </body>
 </html>
