--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <header id="Home">
-        <h1 >Curiosidades de tecnologia</h1>
+    <header>
+        <h1 id="inicio" >Curiosidades de tecnologia</h1>
         <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar.</p>
     </header>
     <nav>
-        <a href="#home">Home</a>
+        <a href="#inicio">inicio</a>
         <a href="#noticia">Notícias</a>
         <a href="#curiosidade">Curiosidades</a>
         <a href="#contato">Fale Conosco</a>
@@ -80,7 +80,8 @@
         <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
     </main>
 
-        <p><a href="#home">Volta ao topo.</a></p>
+    <p id="topo"><a href="#inicio">Topo do site! &#x1F446;</a></p>
+
     <footer>
          <p id="contato">Site criado por <a href="https://github.com/henriquemfarias" target="_blank" >Henrique Medeiros</a> para o estudo.</p>
         </footer>
