--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
         <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
     </main>
 
+    <p id="topo"><a href="#inicio">Topo do site! &#x1F446;</a></p>
+
     <footer>
          <p id="contato">Site criado por <a href="https://github.com/henriquemfarias" target="_blank" >Henrique Medeiros</a> para o estudo.</p>
         </footer>
